--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.JwtAuth">
+            android:theme="@style/Theme.JwtAuth"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
